crates/vize_maestro/tests/snapshots/davinci_ts40_projection__davinci_ts40__vue2-native-event__mixed-vue2__legacy-generators-disabled.snap
---
source: crates/vize_maestro/tests/davinci_ts40_projection.rs
assertion_line: 33
expression: record.render()
---
fixture=vue2-native-event
source-sha256=2b2f3214a7683c004e02b705721aa82bfb50a333a21cbf74e35443d1c9d3a47f
[canon]
status=feature-disabled:vize_canon/legacy
text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
pre-rewrite-text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map-probes=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hit-anchors=[]
[content-mapper]
status=ok:vue3-fixed-production
text=19000:06540e29ad196462dea5f16c59b2665872cd875f41bf466f9b3df5c556a06c45
pre-rewrite-text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map-probes=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=9:ed09ca46294829a400bcc5377451fefc83b9de8e23cfd4d9f2bb7b0df0294196
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=5:b1f4102ab6a5be5f8548bffdeffd4a20b253755cfade444c4fe32d1e9f105b73
authored-hit-anchors=["message", "input"]
[maestro]
status=feature-disabled:vize_maestro/legacy
text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
pre-rewrite-text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map-probes=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hit-anchors=[]
