crates/vize_maestro/tests/snapshots/davinci_ts40_projection__davinci_ts40__vue2-native-event__mixed-vue2__legacy-generators-enabled.snap
---
source: crates/vize_maestro/tests/davinci_ts40_projection.rs
expression: record.render()
---
fixture=vue2-native-event
source-sha256=2b2f3214a7683c004e02b705721aa82bfb50a333a21cbf74e35443d1c9d3a47f
[canon]
status=ok:legacy-feature-projection
text=14776:3c22f5d6dae79e0d588b5662df56ff8d15f78339c6acdfb69f8fc60f2ab63399
pre-rewrite-text=14776:3c22f5d6dae79e0d588b5662df56ff8d15f78339c6acdfb69f8fc60f2ab63399
import-source-map=0:8fb0b48e264b49d7d87ed152b0b8330a9f4f506a1b5d715d076e65d79aa4da42
import-source-map-probes=29554:a9b63fce8e0d88ffffee1873246699dea40fe739fe808129cdbeb12e719e428f
mappings=7:55009c68df209d728aacbcb4facf04e5e46b8984fcf435cb92d416ca04911d2d
semantic-links=1:d180f262aa518d2d1980cc1818d437695e21dedf10c4f0143f4b2599cdb7afe8
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hit-anchors=[]
[content-mapper]
status=ok:vue3-fixed-production
text=18909:a8bd0a430f18525511b13efe9338c4f9949574626791f6daedfbc9a24c238892
pre-rewrite-text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map-probes=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=9:afa02309a8970a495d49c212168e8c7e8a8e129354768b64d4f689b974710192
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=5:89f75856c358b079e613a128a2ae44804505a139333a9277ea48bc290c441c74
authored-hit-anchors=["message", "input"]
[maestro]
status=ok:legacy-feature-projection
text=427:8ac3c8f75d324f830e7c10aaa03aeab1ff5a32218eb40693a05863f96fc14ad3
pre-rewrite-text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map-probes=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=3:a75e531bbaf9e06e1447e0b8203e7d880b4235bd77e4ee8459e023a9201c5337
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=4:a86c3df107e683dd11d5f05c16b9f7fcabcbcbf405af4b8631f7187f58d69f40
authored-hit-anchors=["message", "input"]
